feat: routing, alaising & much more

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link
+      rel="preload"
+      href="./src/assets/fonts/cairo-variable.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+    <title>start-kit</title>
   </head>
   <body>
     <div id="root"></div>
